   available valid values for an `ExtensionOption` like `IPasswordHashMethod`
   by a select field (dropdown box) - or meaningful message on missing options
 * add cleanup page for purging `session_attribute` db table via admin web UI
 * add randomized authentication cookie ID refreshment, average refresh rate
   controlled by new option `cookie_refresh_pct`


acct_mgr-0.3.2 (26-Aug-2011) - branch 0.11
 resolved issues
 * #9051: Unable to add users due to existing email addresses
   by fixing SQL statements responsible for db cleanup on account deletion
 * #9082: Remove cookie's `expires` param (0.12) when rememberme is unchecked
 * #9088: Expire trac_auth_session cookie before LoginModule._do_logout
 * #9091: <b> tags in user registration notification
 * #9092: TypeError: __call__() got an unexpected keyword argument 'link'
 * #9093: A href tags in verification notice
 * #9095: Delete session cookie if client sent it and rememberme is unchecked
 * #9099: Expire session cookie whenever trac_auth cookie gets expired
 * #9107: Error when building the egg file
 * #9108: TypeError: 'NoneType' object is not iterable
 * #9109: TypeError: 'NoneType' object is not iterable
 * fix TypeError in account details admin page for not yet authenticated users
 * make option `verify_email` effective for `RegistrationModule`
 * fix bug from initial password store chaining implementation leading to
   false-positives on user store discovery and later unexpected login failure
 * change account details admin page into users admin subpage


acct_mgr-0.3.1 (13-Jul-2011) - branch 0.11
 resolved issues
 * #8963: Restore compatibility with Trac 0.11 - holding 10 different issues
 * further improve redirect loop protection (infinite loop after /login)
 * add more verbose error log messages for missing/unreadable password file
 * remove duplicated message in Trac 0.11 at account details admin page
 * prevent argument duplication on POST requests of account details admin page